# leafnode

./: .boring  .cvsignore  .gitignore  .indent.pro  .lclintrc  .rsyncs  AUTHORS  CHANGES-FROM-LEAFNODE-1  COPYING  COPYING.LGPL  CREDITS  ChangeLog  ChangeLog-2003  ChangeLog.ma  DEBUGGING  Doxyfile  ENVIRONMENT  FAQ  FAQ.tex  INSTALL  Makefile.am  Makefile.in  NEWS  README  README-FQDN.tex  README-leaf.node  README.html  README_FIRST  TODO  TOMERGE  UPDATING  acconfig.h  aclocal.m4  activutil.c  activutil.h  activutil_resolve.c  addpatches.pl  amiroot.c  applyfilter.8  applyfilter.8.in  (+192 more)
doc_catalan/: miniCOM-leafnode-0.5.1.sgml
doc_german/: README
doc_german/man/man1/: newsq.1
doc_german/man/man8/: applyfilter.8  checkgroups.8  fetchnews.8  leafnode.8  texpire.8
doc_german/txt/: INSTALL_de  README_de  applyfilter.8.txt  checkgroups.8.txt  fetchnews.8.txt  leafnode.8.txt  newsq.1.txt  texpire.8.txt
pcre/: Makefile  Makefile.in  README  configure.in  dftables  mkinstalldirs  myinput  pcre.7
tools/: .cvsignore  Makefile.am  README  lsmac.pl  make_pass.pl  newsgroup2groupinfo.pl  sendbatch.bash.in  simple-batcher.sh  uucp
